# temporal-gnn-dynamic-systems

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: README.md  baseline_tgn.json  enhanced_tgn.json  wikipedia.json  wikipedia_no_graph_time.json
docs/: EXPERIMENT.md  RESULTS.md
notebooks/: README.md
src/temporal_gnn/: __init__.py  baseline.py  compare.py  config.py  data.py  experiment.py  metrics.py  model.py  run.py  validation.py
tests/: __init__.py  test_compare.py  test_metrics.py  test_tgn_smoke.py  test_validation.py
