[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-gnn-dynamic-systems"
version = "0.1.0"
description = "Leakage-safe temporal link prediction with TGN"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "torch>=2.8,<3",
  "torch-geometric>=2.6,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.9"]

[project.scripts]
temporal-gnn = "temporal_gnn.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
